visibility fixed

--- a/style.css
+++ b/style.css
@@ -218,6 +218,8 @@ section{
     align-items: center;
     justify-content: space-evenly;
     position: relative;
+
+    visibility: hidden;
 }
 
 .section-2-heading{
@@ -287,6 +289,7 @@ section{
     flex-direction: column;
     align-items: center;
     justify-content: start;
+    visibility: hidden;
 }
 
 .section-3-bg{
@@ -378,6 +381,7 @@ p strong{
     align-items: center;
     justify-content: center;
     color: whitesmoke;
+    visibility: hidden;
     /* transition: opacity 1.5s; */
 }
 
